# cc-detector

./: .gitignore  CLAUDE.md  pyproject.toml
credit-card-detector/: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION_UPDATES.md  Dockerfile  LICENSE.md  Makefile  QUICK_START.md  README.md  README_DETAILED.md  STARTUP_GUIDE.md  app.py  app_metrics_demo.py  check-health.sh  claude.md  docker-compose.development.yml  docker-compose.local.yml  docker-compose.production.yml  docker-compose.testing.yml  docker-compose.yml  main.py  monitor_credit_card_performance.py  pyproject.toml  requirements-dev.txt  requirements.txt  run-mode-tests.sh  setup.sh  start-enterprise.sh  start-local-monitoring.sh  start-production.sh  start.sh  stop-local-monitoring.sh  stop.sh  update_skill_imports.py  verify-grafana-dashboard.sh
credit-card-detector/.github/workflows/: ci-cd.yml
credit-card-detector/archive/claude_subagent/: Dockerfile
credit-card-detector/archive/claude_subagent/config/: __init__.py
credit-card-detector/archive/claude_subagent/plugin_system/: __init__.py
credit-card-detector/archive/claude_subagent/resource_management/: __init__.py
credit-card-detector/archive/legacy_apps/: .env.local  .env.production  adaptive_app.py  app.py  app_with_metrics.py  enhanced_adaptive_app.py
credit-card-detector/archive_legacy/monitoring/grafana/dashboards/: credit-card-detector-dashboard.yml
credit-card-detector/archive_legacy/scripts/archive/: start-basic.sh
credit-card-detector/archive_legacy/skills/adaptive/: __init__.py  example_usage.py
credit-card-detector/claude_subagent/: adaptive_app.py  app.py  claude.md  enhanced_adaptive_app.py  resource_aware_adaptive_app.py
credit-card-detector/claude_subagent/monitoring/: __init__.py
credit-card-detector/claude_subagent/monitoring/grafana/datasources/: prometheus.yml
credit-card-detector/claude_subagent/persistence/: __init__.py
credit-card-detector/claude_subagent/resource_management/: __init__.py  examples.py  performance_predictor.py
credit-card-detector/claude_subagent/skill_seekers_integration/: __init__.py  example_integration.py
credit-card-detector/claude_subagent/skills/: detect_credit_cards.py  detect_credit_cards_presidio.py  redact_credit_cards_presidio.py
credit-card-detector/config/: CONFIGURATION_GUIDE.md  README.md  app-config.yaml  default.yaml  production.yaml  resource-profiles.yaml
credit-card-detector/config/environments/: development.env  production.env  staging.env
credit-card-detector/docs/: ADAPTIVE_SKILLS.md  DOCUMENTATION_INDEX.md  INTEGRATION_GUIDE.md  MONITORING_CHEAT_SHEET.md  MONITORING_CONSOLIDATION_SUMMARY.md  MONITORING_GUIDE.md  PRACTICAL_EXAMPLES.md  QUICK_START_TUTORIAL.md  README.md  REORGANIZATION_SUMMARY.md  RESOURCE_AWARE_AI.md  SERVICE_PORTS.md  SKILLS_REORGANIZATION_SUMMARY.md  SKILL_ORGANIZATION_PLAN.md  SKILL_SEEKERS_INTEGRATION.md  SKILL_SEEKERS_INTEGRATION_REORGANIZATION.md  STARTUP_SUMMARY.md  TESTS_CONSOLIDATION_SUMMARY.md  TUTORIAL.md  claude.md  compute-resources.md
credit-card-detector/docs/examples/: integration_demo.py
credit-card-detector/docs/examples/api_integrations/: basic_api.py
credit-card-detector/docs/examples/claude_skills/: README.md  claude_skills_example.py
credit-card-detector/docs/examples/n8n_workflows/: README.md  n8n_integration.py
credit-card-detector/examples/: README.md  README_integration_examples.md  integration_demo.py
credit-card-detector/examples/api/: README.md
credit-card-detector/examples/api_integrations/: webhook_server.py
credit-card-detector/examples/basic/: basic_redaction.py  simple_detection.py
credit-card-detector/examples/basic_usage/: simple_detection.py
credit-card-detector/monitoring/: README.md  prometheus-local.yml
credit-card-detector/monitoring/grafana/dashboards/: credit-card-dashboard.json  credit-card-detection-performance.json  credit-card-detector-dashboard.json
credit-card-detector/monitoring/grafana/provisioning/dashboards/: dashboard.yml
credit-card-detector/monitoring/grafana/provisioning/dashboards/boards/: credit-card-detector-dashboard.json
credit-card-detector/monitoring/prometheus/: prometheus.yml
credit-card-detector/n8n-workflow/: workflow.json
credit-card-detector/presidio/: claude.md
credit-card-detector/scripts/archive/: README.md
credit-card-detector/sdk/javascript/: package.json
credit-card-detector/sdk/javascript/src/: index.ts
credit-card-detector/sdk/python/claude_subagent_sdk/: __init__.py
credit-card-detector/skills/: __init__.py
credit-card-detector/skills/core/: redact_credit_cards.py
credit-card-detector/skills/integration/: __init__.py
credit-card-detector/skills/integration/skill_seekers_integration/: example_integration.py
credit-card-detector/src/api/: __init__.py  endpoints.py  metrics.py  schemas.py
credit-card-detector/src/core/: detect_credit_cards_presidio.py
credit-card-detector/src/detector/: __init__.py  core.py  patterns.py  validators.py
credit-card-detector/src/integration/skill_seekers_integration/: __init__.py  main.py
credit-card-detector/src/utils/: __init__.py  config.py
credit-card-detector/test/: test_subagent.py
credit-card-detector/tests/: README.md  conftest.py  test_adaptive_skills.py  test_credit_card_detection.py  test_detector.py  test_health.py  test_subagent.py
credit-card-detector/tests/broken/: test_detector_legacy.py  test_skill_seekers_integration.py  test_subagent.py
credit-card-detector/tests/integration/: test_health.py  test_subagent.py
credit-card-detector/tests/load_testing/: generate_load_test.py
credit-card-detector/tests/unit/: test_credit_card_detection.py  test_detector.py
tests/: test_detector.py
