[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-subagent-credit-card-detector"
version = "1.0.0"
description = "Intelligent Credit Card Detection with Resource-Aware AI and Adaptive Skills"
readme = "README.md"
license = {file = "LICENSE", text = "MIT"}
authors = [
    {name = "Claude SubAgent Team", email = "team@claude-subagent.com"}
]
maintainers = [
    {name = "Claude SubAgent Team", email = "team@claude-subagent.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]
keywords = [
    "credit-card",
    "fraud-detection",
    "pii",
    "security",
    "ai",
    "machine-learning",
    "adaptive-intelligence",
    "resource-management"
]

requires-python = ">=3.11"

dependencies = [
    "flask>=3.0.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "jinja2>=3.1.0",
    "prometheus-client>=0.17.0",
    "cryptography>=41.0.0",
    "jsonschema>=4.0.0",
    "watchdog>=3.0.0",
    "skill-seekers>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.5.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.8.0",
    "pre-commit>=3.4.0",
    "tox>=4.11.0",
    "sphinx>=6.2.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocs-mermaid2-plugin>=1.1.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.5.0",
    "pytest-mock>=3.12.0",
]

docs = [
    "sphinx>=6.2.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocs-mermaid2-plugin>=1.1.0",
    "mkdocs-awesome-pages-plugin>=2.8.0",
]

monitoring = [
    "prometheus-client>=0.17.0",
    "grafana-api>=1.0.3",
    "sentry-sdk[flask]>=1.39.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-exporter-prometheus>=1.12.0",
    "opentelemetry-exporter-jaeger-thrift>=1.21.0",
]

database = [
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.0",
    "pymongo>=4.5.0",
    "redis>=5.0.0",
    "elasticsearch>=8.10.0",
]

performance = [
    "uvloop>=0.19.0",
    "orjson>=3.9.0",
    "cachetools>=5.3.0",
    "ujson>=5.8.0",
]

[project.urls]
Homepage = "https://github.com/claude-subagent/credit-card-detector"
Documentation = "https://claude-subagent.github.io/credit-card-detector/"
Repository = "https://github.com/claude-subagent/credit-card-detector.git"
"Bug Tracker" = "https://github.com/claude-subagent/credit-card-detector/issues"
Changelog = "https://github.com/claude-subagent/credit-card-detector/blob/main/CHANGELOG.md"
Discussions = "https://github.com/claude-subagent/credit-card-detector/discussions"

[project.scripts]
build = "python -m build"
build-wheel = "python -m build --wheel"
build-sdist = "python -m build --sdist"
install = "python -m pip install -e ."
install-dev = "python -m pip install -e .[dev]"
test = "pytest"
test-verbose = "pytest -v"
test-cov = "pytest --cov=skills --cov-report=html --cov-report=term"
test-cov-xml = "pytest --cov=skills --cov-report=xml"
lint = "flake8 skills tests"
format = "black skills tests"
format-check = "black --check skills tests"
type-check = "mypy skills"
docs = "mkdocs serve"
docs-build = "mkdocs build"
clean = "rm -rf build dist *.egg-info"

[tool.setuptools.packages.find]
where = ["src"]
include = ["claude_subagent*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"claude_subagent.plugins" = ["*.yaml", "*.json"]
"claude_subagent.config" = ["*.yaml", "*.json", "*.toml"]
"claude_subagent.skills" = ["*.yaml", "*.json"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "skill_seekers.*",
    "psutil.*",
    "prometheus_client.*",
    "watchdog.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    # "--cov=skills",
    # "--cov-report=html",
    # "--cov-report=term-missing",
    # "--cov-report=xml",
    # "--cov-fail-under=80",
]
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "performance: Performance tests",
    "slow: Slow tests",
    "resource_intensive: Resource-intensive tests",
]

[tool.coverage.run]
source = ["skills"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/.*/*",
]
branch = true
fail_under = 80

# [tool.tox]
# envlist = ["py311", "py312"]
# isolated_build = true

# [testenv]
# commands = [
#     { python = "python", deps = ["test"], command = "pytest" },
#     { python = "python", deps = ["test", "monitoring"], command = "pytest tests/monitoring/" },
#     { python = "python", deps = ["test", "database"], command = "tests/database/" },
# ]

# [testenv:lint]
# deps = ["dev"]
# commands = [
#     "black --check",
#     "isort --check-only",
#     "flake8",
#     "mypy",
# ]

# [testenv:docs]
# deps = ["docs"]
# commands = [
#     "mkdocs build",
# ]

# [testenv:perf]
# deps = ["test", "performance"]
# commands = [
#     "pytest -m performance -vv",
#     "python scripts/performance_benchmark.py",
# ]

[tool.doc8]
paths = ["docs"]
ignore = ["build"]

[tool.hatch]
env.default-type = "path"

[build.hatch.envs.default]
python = ["python3.11", "python3.12"]

[tool.semantic_release]
version_variable = "claude_subagent/__init__.py:__version__"
build_command = "python -m build"
upload_to_pypi = true
upload_to_release = true
version_pattern = "^(?P<v>\\d+\\.\\d+\\.\\d+)"
major_on_zero = false
tag_format = "v{version}"
tag_message = "Release version {version}"
changelog_sections = [
    "feature",
    "fix",
    "performance",
    "security",
    "documentation",
    "misc",
]
commit_message = "Release {version} 🎉"
repository = "https://github.com/claude-subagent/credit-card-detector"

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = "rc"